--- a/CSS/musica.css
+++ b/CSS/musica.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(/img/fondotf.jpg);  
+    background-image: url(/Imagenes/fondotf.jpg);  
     background-position: center center;       
     background-size: cover;                   
     background-repeat: no-repeat;             
