--- a/CSS/tradicio.css
+++ b/CSS/tradicio.css
@@ -1,6 +1,6 @@
 body {
     background-repeat: no-repeat;
-    background-image: url(Fondo.1.jpeg);
+    background-image: url(/Imagenes/fondo.jpg);
     background-position: center;
     background-size: cover;
     font-family: 'Times New Roman', Times, serif;
